# CroAIcon

./: .Rprofile  .gitignore  404.qmd  AGENTS.md  CLAUDE.md  DESCRIPTION  MEMORY.md  README.md  _quarto.yml  about.qmd  env.example  index.qmd  podaci.qmd  pyproject.toml
.claude/: settings.example.json
Design/: 404.dc.html  Article.dc.html  Brand.dc.html  Home.dc.html  Mobile.dc.html  O projektu.dc.html  Podaci.dc.html  Style Tile.dc.html  Tag Index.dc.html
R/: 00_config.R  charts.R  chow_lin_gdp_1991_1992.R  get_eurostat.R  get_gfi.R  get_maddison.R  get_pwt.R  get_tica.R  get_worldbank.R  house_style.R  prepare_data.R  prepare_gdp.R  state_aid_concentration_charts.R  tables.R
_workflow/: INTEGRATION.md  chart-playbook.md  data-provenance.md  gfi-variable-map.md  house-style-guide.md  how-it-works.md  idea-playbook.md  ideas-backlog.md  quality-gates.md  review-checklist.md
posts/: _metadata.yml  _template.qmd
prompts/: croaicon_post_prompt.md  style_guide_hr.md
python/: ai_draft.py  debt_structure_build.py  debt_structure_charts.py  fact_check_helpers.py  gdp_charts.py  import_gfi_db_afs_codebook.py  price_margin_charts.py  price_margin_winners.py  sector_margin_growth_2021_2024.py  sector_margin_growth_charts.py  sectors_build.py  sectors_charts.py  state_aid_concentration_build.py  zagreb_profit_build.py  zagreb_profit_charts.py  zombie_topic1_build.py  zombie_topic1_charts.py
quality_reports/: 2026-06-rast-marzi-po-sektorima_qa.md  2026-06-zaduzenost-hrvatskih-firmi_qa.md  2026-07-drzavne-potpore-koncentracija_qa.md
research/: gfi_blog_topics.md  (+4 more)
(+82 files in other folders)
