[project]
name = "croaicon"
version = "0.1.0"
description = "AI-assisted Quarto blog workflow for Croatian economic analysis."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

