[project]
name = "croaicon"
version = "0.1.0"
description = "AI-assisted Quarto blog workflow for Croatian economic analysis."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0"
]
# Chart rendering in the house matplotlib style (python/gdp_charts.py,
# python/sectors_charts.py, ...). Run: uv run --extra charts python python/<script>.py
charts = [
  "matplotlib>=3.8",
  "pandas>=2.0",
  "numpy>=1.24"
]

[tool.ruff]
line-length = 100
target-version = "py311"

